replace bash variable with raw content.

--- a/_template_docker-prod.conf
+++ b/_template_docker-prod.conf
@@ -1,4 +1,3 @@
 docker rm -f {{config_name}}-telegraf
 
-CONFIG_FILE={{config_path}}/{{config_name}}.conf \
-docker run -e TZ=Asia/Bangkok -d -it --name={{config_name}}-telegraf --net=host --restart always -v $CONFIG_FILE:/etc/telegraf/telegraf.conf:ro telegraf
+docker run -e TZ=Asia/Bangkok -d -it --name={{config_name}}-telegraf --net=host --restart always  -v {{config_path}}/{{config_name}}.conf:/etc/telegraf/telegraf.conf:ro telegraf
