--- a/_template_docker-debug.conf
+++ b/_template_docker-debug.conf
@@ -1,2 +1,1 @@
-CONFIG_FILE={{config_path}}/debug_{{config_name}}.conf \
-docker run --rm -e TZ=Asia/Bangkok -it --name={{config_name}}-telegraf-debug --net=host  -v $CONFIG_FILE:/etc/telegraf/telegraf.conf:ro telegraf
+docker run --rm -e TZ=Asia/Bangkok -it --name={{config_name}}-telegraf-debug --net=host -v {{config_path}}/debug_{{config_name}}.conf:/etc/telegraf/telegraf.conf:ro telegraf
